--- a/src/assets/scss/sidebar.scss
+++ b/src/assets/scss/sidebar.scss
@@ -117,6 +117,7 @@
             border-radius: 25px;
             margin-bottom: 20px;
             transition: padding 0.3s ease-in-out;
+            align-items: center;
             @media ($sm-1679){
                 margin-bottom: 15px;
             }
