--- a/src/assets/scss/header.scss
+++ b/src/assets/scss/header.scss
@@ -73,6 +73,16 @@
                     font-size: 12px;
                     color: #000000;
                 }
+                .dropdown-menu{
+                    background-color: #c0d5ee;
+                    .dropdown-item{
+                        font-size: 14px;
+                        color: #000000;
+                        &:hover{
+                            background: linear-gradient(90deg, rgba(255, 255, 255, 0.4) 0%, rgba(255, 255, 255, 0) 100%);
+                        }
+                    }
+                }
             }
             .user-name {
                 display: flex;
