--- a/src/assets/scss/modal.scss
+++ b/src/assets/scss/modal.scss
@@ -246,7 +246,7 @@
                     padding: 20px 30px;
                 }
                 .btn-close{
-                    background: url(../img/modal-close-btn.svg) no-repeat center;
+                    background: url(../images/modal-close-btn.svg) no-repeat center;
                     box-shadow: none;
                     outline: none;
                     @media ($sm-1199){
@@ -577,10 +577,10 @@
                 padding: 32px 28px 28px;
                 border-bottom: 1px solid #B3C6DD69;
                 @media ($sm-1679){
-                    padding: 24px 28px;
+                    padding: 20px 28px;
                 }
                 @media ($sm-1199){
-                    padding: 20px 28px;
+                    padding: 15px 28px;
                 }
                 .btn-close{
                     width: 29px;
@@ -761,17 +761,29 @@
 
 .prompt-modal{
     .modal-dialog{
-        max-width: 600px;
+        max-width: 640px;
+        @media($sm-1199){
+            max-width: 500px;
+        }
+        @media($sm-579){
+            max-width: 90%;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        @media($sm-479){
+            max-width: 95%;
+            margin-left: auto;
+            margin-right: auto;
+        }
         .modal-content{
             border-radius: 40px;
             .modal-header{
-                padding: 32px 28px 28px;
-                border-bottom: 1px solid #B3C6DD69;
+                padding: 0;
+                border-bottom: none;
                 .btn-close{
                     width: 29px;
                     height: 29px;
                     border-radius: 29px;
-                    background-color: #F2F5FA;
                     font-size: 10px;
                     padding: 0;
                     position: absolute;
@@ -779,6 +791,10 @@
                     right: 30px;
                     box-shadow: none;
                     outline: none;
+                    background: url(../images/modal-close-btn.svg) #F2F5FA no-repeat center;
+                    background-size: 10px;
+                    opacity: 1;
+                    z-index: 1;
                 }
                 .modal-title{
                     font-weight: 500;
@@ -787,8 +803,23 @@
                 }
             }
             .modal-body{
-                padding: 21px 28px;
+                padding: 21px 86px 0;
                 min-height: 130px;
+                @media ($sm-1679){
+                    padding: 21px 60px 0;
+                }
+                @media ($sm-1441){
+                    padding: 21px 50px 0;
+                }
+                @media ($sm-1199){
+                    padding: 20px 40px 0;
+                }
+                @media ($sm-991){
+                    padding: 20px 30px 0;
+                }
+                @media ($sm-767){
+                    padding: 20px 20px 0;
+                }
                 &::-webkit-scrollbar {
                     width: 4px;
                 }
@@ -805,80 +836,105 @@
                     justify-content: center;
                     width: 100%;
                     margin-bottom: 30px;
+                    margin-top: 47px;
+                    @media ($sm-1679){
+                        margin-bottom: 25px;
+                        margin-top: 40px;
+                    }
+                    @media ($sm-1441){
+                        margin-bottom: 20px;
+                        margin-top: 35px;
+                    }
+                    @media ($sm-1199){
+                        margin-top:30px;
+                        margin-bottom: 15px;
+                    }
+                    @media ($sm-991){
+                        margin-top:25px;
+                        margin-bottom: 0px;
+                    }
+                    @media ($sm-579){
+                        margin-top:20px;
+                    }
                     .icon-blk{
-                        width: 74px;
-                        height: 74px;
-                        border-radius: 74px;
-                        background-color: #D8E1ED;
+                        width:144px;
+                        height:144px;
+                        border-radius: 144px;
                         display: flex;
                         align-items: center;
                         justify-content: center;
+                        img{
+                            width: 100%;
+                            height: 100%;
+                            object-fit: contain;
+                        }
                         @media ($sm-1679){
-                            width: 64px;
-                            height: 64px;
+                            width: 120px;
+                            height: 120px;
+                            border-radius: 120px;
+                        }
+                        @media ($sm-1441){
+                            width: 100px;
+                            height: 100px;
+                            border-radius: 100px;
                         }
                         @media ($sm-1199){
-                            width: 55px;
-                            height: 55px;
+                            width: 80px;
+                            height: 80px;
+                            border-radius: 80px;
+                        }
+                        @media ($sm-991){
+                            width: 70px;
+                            height: 70px;
+                            border-radius: 70px;
                         }
                     }
                 }
                 .prompt-title{
-                    font-size: 20px;
+                    font-size: 18px;
+                    font-weight: 600;
                     margin: 20px 0 0;
                     text-align: center;
-                    color: #313957;
+                    color: #0E0E0E;
+                    max-width: 242px;
+                    text-align: center;
+                    margin: 13px auto;
                     @media ($sm-1679){
-                        font-size: 18px;
-                    }
-                    @media ($sm-1441){
                         font-size: 17px;
                     }
-                    @media ($sm-1199){
+                    @media ($sm-1441){
                         font-size: 16px;
+                    }
+                    @media ($sm-1199){
+                        font-size: 15px;
                     }
                 }
             }
             .modal-footer{
-                padding: 20px 14px;
-                .btn-primary{
-                    border-radius: 35px;
-                    height: 49px;
-                    width: calc(50% - 16px);
-                    font-size: 20px;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    background: linear-gradient(90deg, #2CA0DA 0%, #3982A7 100%);
-                    border:none;
-                    margin-left: 16px;
-                    @media ($sm-1679){
-                        height: 45px;
-                        font-size: 18px;
-                    }
-                    @media ($sm-1441){
-                        font-size: 17px;
-                    }
-                    @media ($sm-1199){
-                        font-size: 16px;
-                        margin-left: 10px;
-                        height: 40px;
-                    }
-                    @media ($sm-479){
-                        width: 100%;
-                        margin-left: 0px;
-                        margin-top: 10px;
-                    }
-                    &:hover{
-                        background: linear-gradient(90deg, #3982A7 0%, #2CA0DA 100%);
-                    }
-                    .icon{
-                        width: 11px;
-                        margin-right: 18px;
-                    }
+                padding: 50px 86px;
+                border: none;
+                @media ($sm-1679){
+                    padding: 45px 60px;
                 }
-                .btn-cancel{
+                @media ($sm-1441){
+                    padding: 45px 50px;
+                }
+                @media ($sm-1199){
+                    padding: 40px;
+                }
+                @media ($sm-991){
+                    padding: 30px 40px;
+                }
+                @media ($sm-991){
+                    padding: 30px;
+                }
+                @media ($sm-767){
+                    padding: 20px;
+                }
+
+                .btn{
                     border-radius: 35px;
+                    margin: 0 8px;
                     height: 49px;
                     width: calc(50% - 16px);
                     font-size: 20px;
@@ -888,6 +944,13 @@
                     justify-content: center;
                     background:transparent;
                     border:1px solid #0096DF;
+                    &.btn-primary{
+                        background: linear-gradient(90deg, #2CA0DA 0%, #3982A7 100%);
+                        color: #fff;
+                    }
+                    &.btn-cancel{
+                        background: transparent;
+                    }
                     @media ($sm-1679){
                         height: 45px;
                         font-size: 18px;
@@ -897,8 +960,9 @@
                     }
                     @media ($sm-1199){
                         font-size: 16px;
-                        margin-left: 10px;
                         height: 40px;
+                        margin: 0 5px;
+                        width: calc(50% - 10px);
                     }
                     @media ($sm-479){
                         width: 100%;
