--- a/src/assets/scss/profile.scss
+++ b/src/assets/scss/profile.scss
@@ -6,6 +6,7 @@
     @media($sm-1679){
         max-width: 900px;
         width: 100%;
+        padding-bottom: 20px;
     }
     @media($sm-991){
         width: 90%;
@@ -16,6 +17,19 @@
         font-size: 18px;
         align-items: center;
         padding: 30px 0px;
+        @media ($sm-1679){
+            padding: 25px 0;
+            font-size: 16px;
+        }
+        @media ($sm-1441){
+            padding: 20px 0;
+        }
+        @media ($sm-1199){
+            font-size: 15px;
+        }
+        @media ($sm-767){
+            font-size: 14px;
+        }
         .pro-pic{
             width: 47px;
             height: 47px;
@@ -26,6 +40,26 @@
             justify-content: center;
             flex-shrink: 0;
             margin-right: 15px;
+            @media (max-width: 1679px) {
+                  width: 42px;
+                  height: 42px;
+                  border-radius: 42px;
+              }
+              @media (max-width: 1441px) {
+                  width: 38px;
+                  height: 38px;
+                  border-radius: 38px;
+              }
+              @media (max-width: 1199px) {
+                  width: 36px;
+                  height: 36px;
+                  border-radius: 36px;
+                }
+              @media (max-width: 991px) {
+                  width: 34px;
+                  height: 34px;
+                  border-radius: 34px;
+              }
             img{
                 object-fit: contain;
             }
@@ -39,7 +73,7 @@
         border-radius: 50px;
 
         .profile-picture{
-            background-image: url(../img/profile-picture-bg.png);
+            background-image: url(../images/profile-picture-bg.png);
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
@@ -65,7 +99,7 @@
             &::after{
                 position: absolute;
                 content: "";
-                background-image: url('../img/profile-botm-img.png');
+                background-image: url('../images/profile-botm-img.png');
                 width: 235px;
                 height: 130px;
                 background-repeat: no-repeat;
