--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,207 +1,68 @@
-
-@import 'partials';
-body{
-    font-family: $primaryFont;
-    font-size: 16px;
-    font-weight: 400;
-    &::-webkit-scrollbar {
-        width: 4px;
-        height: 4px;
-    }
-    &::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 4px #D9D9D9;
-    }
-    &::-webkit-scrollbar-thumb {
-    background-color: #91ADBB;
-    outline: 1px solid #D9D9D9;
-    }
-}
-*{
-    ::-webkit-scrollbar {
-        width: 4px;
-        height: 4px;
-    }
-    ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 4px #D9D9D9;
-    }
-    ::-webkit-scrollbar-thumb {
-    background-color: #91ADBB;
-    outline: 1px solid #D9D9D9;
-    }
-}
-a{
-    text-decoration: none;
+@@ -1,82 +1,207 @@
+ @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+/*** all Mobile Screen (iphone 6,7,8) ***/
+/*** mobile Landscape Size ***/
+/*** medium devices (tablets, less than 992px) ***/
+/*** iPad in landscape ***/
+/**** smaller than desktop 1200 (devices and browsers) ***/
+/*** laptop with MDPI (medium density per inch) resolution ***/
+/*** laptop with HiDPI (High Dots Per Inch) resolution ***/
+/*** WSXGA (Wide Super Extended Graphics Array) resolution ***/
+/*** all Mobile Screen (iphone 6,7,8) ***/
+/*** mobile Landscape Size ***/
+/*** medium devices (tablets, less than 992px) ***/
+/*** iPad in landscape ***/
+/**** smaller than desktop 1200 (devices and browsers) ***/
+/*** laptop with MDPI (medium density per inch) resolution ***/
+/*** laptop with HiDPI (High Dots Per Inch) resolution ***/
+/*** WSXGA (Wide Super Extended Graphics Array) resolution ***/
+body {
+  font-family: 'Outfit', sans-serif;
+  font-size: 16px;
+  font-weight: 400;
 }
 
-.title{
-    font-size: 36px;
-    font-weight: 600;
-    color: #1E1E1E;
-    @media ($sm-1679){
-        font-size: 34px;
-    }
-    @media ($sm-1441){
-        font-size: 32px;
-    }
-    @media ($sm-1199){
-        font-size: 30px;
-    }
-    @media ($sm-991){
-        font-size: 28px;
-    }
-    @media ($sm-767){
-        font-size: 26px;
-    }
+a {
+  text-decoration: none;
 }
-.table-wrap{
-    border: 1px solid #4B164C1A;
-    border-radius: 20px 20px 0 0;
+.title {
+  font-size: 36px;
+  font-weight: 600;
+  color: #1e1e1e;
 }
-.table{
-    table-layout: auto;
-    width: 100%;
-    tr{
-        &:last-child{
-            td{
-                border: none;
-            }
-        }
-    }
-    th{
-        background-color: #D7EAF3;
-        font-size: 16px;
-        font-weight: 500;
-        color: $primaryColor;
-        padding: 32px 18px;
-        vertical-align: middle;
-        @media ($sm-1679){
-            padding: 20px 18px;
-            font-size: 15px;
-        }
-        @media ($sm-1199){
-            padding: 17px 14px;
-            font-size: 14px;
-        }
-        @media ($sm-991){
-            padding: 15px 10px;
-        }
-        &:first-child{
-            border-top-left-radius: 20px;
-            padding-left: 36px;
-            @media ($sm-1679){
-                padding-left: 30px;
-            }
-            @media ($sm-1441){
-                padding-left: 25px;
-            }
-            @media ($sm-1199){
-                padding-left: 20px;
-            }
-            @media ($sm-991){
-                padding-left: 15px;
-            }
-        }
-        &:last-child{
-            border-top-right-radius: 20px;
-            padding-right: 36px;
-            @media ($sm-1679){
-                padding-right: 30px;
-            }
-            @media ($sm-1441){
-                padding-right: 25px;
-            }
-            @media ($sm-1199){
-                padding-right: 20px;
-            }
-            @media ($sm-991){
-                padding-right: 15px;
-            }
-        }
-        &.th-date{
-            min-width: 165px;
-        }
-        &.th-tag{
-            min-width: 160px;
-        }
-        &.th-agency{
-            min-width: 100px;
-        }
-        &.th-id{
-            min-width: 110px;
-        }
-        &.th-time{
-            min-width: 115px;
-        }
-        &.th-amount{
-            min-width: 120px;
-        }
-    }
-    td{
-        color: #216A8D;
-        font-size: 16px;
-        padding: 32px 18px;
-        border-bottom: 1px solid #4B164C1A;
-        white-space: nowrap;
-        @media ($sm-1679){
-            padding: 20px 18px;
-            font-size: 15px;
-        }
-        @media ($sm-1199){
-            padding: 17px 14px;
-            font-size: 14px;
-        }
-        @media ($sm-991){
-            padding: 15px 10px;
-        }
-        &:first-child{
-            padding-left: 36px;
-            @media ($sm-1679){
-                padding-left: 30px;
-            }
-            @media ($sm-1441){
-                padding-left: 25px;
-            }
-            @media ($sm-1199){
-                padding-left: 20px;
-            }
-        }
-        &:last-child{
-            padding-right: 36px;
-            @media ($sm-1679){
-                padding-right: 30px;
-            }
-            @media ($sm-1441){
-                padding-right: 25px;
-            }
-            @media ($sm-1199){
-                padding-right: 20px;
-            }
-        }
-    }
+@media (max-width: 1679px) {
+  .title {
+    font-size: 34px;
+  }
 }
-
-.inner-scroll-outer{
-    &.settings{
-        overflow-y: auto;
-        max-height: calc(100vh - 140px);
-        @media ($sm-1679) {
-            max-height: calc(100vh - 125px);
-        }
-        @media (max-width:650px) {
-            max-height: calc(100vh - 160px);
-        }
-    }
-    &.profile{
-        overflow-y: auto;
-        max-height: calc(100vh - 164px);
-        @media ($sm-1679) {
-            max-height: calc(100vh - 135px);
-        }
-        @media ($sm-1199) {
-            max-height: calc(100vh - 116px);
-        }
-        @media (max-width:650px) {
-            max-height: calc(100vh - 97px);
-        }
-    }
+@media (max-width: 1441px) {
+  .title {
+    font-size: 32px;
+  }
+}
+@media (max-width: 1199px) {
+  .title {
+    font-size: 30px;
+  }
+}
+a {
+  text-decoration: none;
+}
+/* custom dropdown */
+.css-13cymwt-control {
+  background-color: transparent !important;
+  border: none !important;
+}
+.css-t3ipsp-control {
+  box-shadow: none !important;
+  border-color: transparent !important;
+  background-color: transparent !important;
+  border: none !important;
+}
+.css-t3ipsp-control:hover {
+  border-color: none !important;
+}
+.css-1wy0on6 {
+  padding-right: 15px !important;
+  margin-bottom: 5px !important;
 }
