--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -204,4 +204,17 @@ a{
             max-height: calc(100vh - 97px);
         }
     }
+    &.add-inventory{
+        overflow-y: auto;
+        max-height: calc(100vh - 164px);
+        @media ($sm-1679) {
+            max-height: calc(100vh - 135px);
+        }
+        @media ($sm-1199) {
+            max-height: calc(100vh - 116px);
+        }
+        @media (max-width:650px) {
+            max-height: calc(100vh - 97px);
+        }
+    }
 }
