--- a/src/assets/scss/settings.scss
+++ b/src/assets/scss/settings.scss
@@ -1,35 +1,35 @@
 @import "partials";
 .right-pannel {
     position: relative;
-    padding-bottom: 50px;
+    // padding-bottom: 50px;
 }
 
 .settings-wrap {
     width: 1120px;
     margin: 0 auto;
-    padding: 100px 0;
+    padding: 100px 0 0;
     @media ($sm-1679) {
-        padding: 50px 0;
+        padding: 50px 0 0;
         width: 960px;
     }
     @media ($sm-1481) {
         width: 800px;
-        padding: 45px 0;
+        padding: 45px 0 0;
     }
     @media ($sm-1199) {
         width: 700px;
-        padding: 40px 0;
+        padding: 40px 0 0;
     }
     @media ($sm-991) {
         width: 100%;
         max-width: 500px;
-        padding: 30px 0;
+        padding: 30px 0 0;
     }
     @media ($sm-767) {
         max-width: 90%;
     }
     @media ($sm-479) {
-        padding: 30px 0;
+        padding: 30px 0 0;
     }
     .head-wrap {
         padding: 0 0 35px 0;
