--- a/src/assets/scss/usermanagement.scss
+++ b/src/assets/scss/usermanagement.scss
@@ -165,6 +165,220 @@
           max-width: 16px;
         }
       }
+      .dropdown-toggle {
+        flex-grow: 1;
+        display: flex;
+        justify-content: space-between;
+        &::after {
+          display: none;
+        }
+      }
+      .filter-dropdown {
+        width: 578px;
+        border: 1px solid #0096df0f;
+        border-radius: 21px;
+        box-shadow: 3px 15px 14.9px 0px #0000000f;
+        margin-top: 20px !important;
+        @media ($sm-1679) {
+          width: 520px;
+        }
+        @media ($sm-767) {
+          width: 490px;
+        }
+        @media ($sm-579) {
+          width: 350px;
+        }
+
+        &:before {
+          top: -9px;
+          right: 30px;
+          position: absolute;
+          content: '';
+          width: 0;
+          height: 0;
+          border-left: 9px solid transparent;
+          border-right: 9px solid transparent;
+          border-bottom: 10px solid #fff;
+        }
+        .drop-title {
+          padding: 38px 30px 22px;
+          border-bottom: 1px solid #b3c6dd69;
+          font-weight: 500;
+          font-size: 18px;
+          @media ($sm-1679) {
+            padding: 25px 30px 20px;
+            font-size: 16px;
+          }
+          @media ($sm-1441) {
+            padding: 20px 30px 20px;
+            font-size: 15px;
+          }
+        }
+        .drp-cont {
+          padding: 36px 30px 30px;
+          @media ($sm-1679) {
+            padding: 25px;
+          }
+          @media ($sm-1199) {
+            padding: 20px;
+          }
+          @media ($sm-579) {
+            max-height: 235px;
+            overflow-y: auto;
+          }
+          @media ($sm-479) {
+            max-height: 125px;
+            overflow-y: auto;
+          }
+          .row {
+            margin-bottom: 23px;
+            @media ($sm-1679) {
+              margin-bottom: 20px;
+            }
+            @media ($sm-1199) {
+              margin-bottom: 15px;
+            }
+          }
+          .col-form-label {
+            font-size: 16px;
+            white-space: nowrap;
+            @media ($sm-1679) {
+              font-size: 15px;
+            }
+            @media ($sm-1199) {
+              font-size: 14px;
+            }
+          }
+          .field-mask {
+            position: relative;
+            .calendar-icon {
+              position: absolute;
+              width: 22px;
+              height: 22px;
+              right: 20px;
+              top: 10px;
+              img {
+                max-width: 100%;
+              }
+            }
+            .form-control {
+              padding-right: 25px;
+            }
+          }
+          .form-check-inline {
+            margin-right: 23px;
+          }
+          .form-select {
+            background-color: #f7fbff;
+            border: 1px solid #f1f1f1;
+            height: 44px;
+            border-radius: 12px;
+          }
+          .form-control {
+            border-radius: 12px;
+            background-color: #f7fbff;
+            border: 1px solid #f1f1f1;
+            color: #8897ad;
+          }
+          .form-check-input:checked[type='radio'] {
+            background-image: url(../img/radio-checked.svg);
+            background-color: transparent;
+          }
+        }
+        .filter-ftr {
+          display: flex;
+          justify-content: flex-end;
+          padding: 32px 33px 30px;
+          border-top: 1px solid #b3c6dd69;
+          @media ($sm-1679) {
+            padding: 25px 33px 25px;
+          }
+          @media ($sm-1441) {
+            padding: 20px 25px 20px;
+          }
+          @media ($sm-1199) {
+            padding: 15px 20px 15px;
+          }
+          @media ($sm-767) {
+            padding: 10px 20px 10px;
+          }
+          @media ($sm-479) {
+            flex-direction: column;
+          }
+          .btn {
+            border-radius: 35px;
+            margin: 0 8px;
+            max-width: 150px;
+            width: 100%;
+            height: 39px;
+            width: calc(50% - 16px);
+            font-size: 20px;
+            color: #0096df;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: transparent;
+            border: 1px solid #0096df;
+            &.btn-primary {
+              background: linear-gradient(90deg, #2ca0da 0%, #3982a7 100%);
+              color: #fff;
+            }
+            &.btn-cancel {
+              background: transparent;
+            }
+            @media ($sm-1679) {
+              height: 35px;
+              font-size: 18px;
+              max-width: 150px;
+            }
+            @media ($sm-1441) {
+              font-size: 17px;
+              max-width: 150px;
+            }
+            @media ($sm-1199) {
+              font-size: 16px;
+              height: 40px;
+              max-width: 150px;
+              margin: 0 5px;
+            }
+            @media ($sm-991) {
+              height: 38px;
+            }
+            @media ($sm-479) {
+              width: 100%;
+              max-width: 100%;
+              margin-left: 0px;
+              margin-top: 10px;
+            }
+            &:hover {
+              background: #1081bad6;
+              color: #fff;
+            }
+            &.clr {
+              padding: 0;
+              border: none;
+              width: auto;
+              font-size: 13px;
+              font-weight: 300;
+              height: auto;
+              &:hover {
+                background-color: transparent;
+                color: #0096df;
+              }
+            }
+          }
+          .grp-btn {
+            display: flex;
+            flex-grow: 1;
+            justify-content: flex-end;
+            margin-left: auto;
+            @media ($sm-479) {
+              flex-direction: column;
+              margin-left: 0;
+            }
+          }
+        }
+      }
     }
     .button-wrap {
       display: flex;
@@ -250,29 +464,29 @@
           img {
             max-width: 77px;
             @media ($sm-1679) {
-              max-width: 19px;
+              max-width: 14px;
             }
-            @media ($sm-1441) {
-              max-width: 17px;
-            }
-            @media ($sm-1199) {
-              max-width: 15px;
-            }
+            // @media ($sm-1441){
+            //     max-width: 17px;
+            // }
+            // @media ($sm-1199){
+            //     max-width: 15px;
+            // }
           }
           span {
-            font-size: 18px;
-            @media ($sm-1679) {
-              font-size: 16px;
-            }
-            @media ($sm-1441) {
-              font-size: 15px;
-            }
-            @media ($sm-1199) {
-              font-size: 14px;
-            }
-            @media ($sm-991) {
-              font-size: 13px;
-            }
+            font-size: 14px;
+            // @media ($sm-1679){
+            //     font-size: 16px;
+            // }
+            // @media ($sm-1441){
+            //     font-size: 15px;
+            // }
+            // @media ($sm-1199){
+            //     font-size: 14px;
+            // }
+            // @media ($sm-991){
+            //     font-size: 13px;
+            // }
           }
         }
       }
@@ -367,6 +581,7 @@
         }
         @media ($sm-1199) {
           height: 40px;
+          font-size: 13px;
         }
         &.tw1 {
           width: 18%;
@@ -683,28 +898,28 @@
     &.ezpass-table-wrap {
       th {
         &.ez-tw1 {
-          width: 16%;
+          width: 225px;
         }
         &.ez-tw2 {
-          width: 10%;
+          width: 109px;
         }
         &.ez-tw3 {
-          width: 15%;
+          width: 169px;
         }
         &.ez-tw4 {
-          width: 15%;
+          width: 171px;
         }
         &.ez-tw5 {
-          width: 15%;
+          width: 140px;
         }
         &.ez-tw6 {
-          width: 10%;
+          width: 95px;
         }
         &.ez-tw7 {
-          width: 9%;
+          width: 75px;
         }
         &.ez-tw8 {
-          width: 10%;
+          width: 145px;
         }
       }
       td {
