--- a/src/assets/scss/usermanagement.scss
+++ b/src/assets/scss/usermanagement.scss
@@ -312,7 +312,7 @@
             width: 100%;
             height: 39px;
             width: calc(50% - 16px);
-            font-size: 20px;
+            font-size: 16px;
             color: #0096df;
             display: flex;
             align-items: center;
@@ -328,15 +328,14 @@
             }
             @media ($sm-1679) {
               height: 35px;
-              font-size: 18px;
+              font-size: 15px;
               max-width: 150px;
             }
             @media ($sm-1441) {
-              font-size: 17px;
+              font-size: 14px;
               max-width: 150px;
             }
             @media ($sm-1199) {
-              font-size: 16px;
               height: 40px;
               max-width: 150px;
               margin: 0 5px;
@@ -496,13 +495,22 @@
 .table-body-wrap {
   padding: 0 25px 25px 25px;
   overflow-y: auto;
-  max-height: calc(100vh - 242px);
+  height: calc(100vh - 258px);
   @media ($sm-1679) {
     padding: 0 20px 20px 20px;
-    max-height: calc(100vh - 198px);
+    height: calc(100vh - 215px);
+  }
+  @media (max-width: 1199px) {
+    height: calc(100vh - 194px);
+  }
+  @media (max-width: 1074px) {
+    height: calc(100vh - 248px);
+  }
+  @media ($sm-991) {
+    height: calc(100vh - 233px);
   }
   @media (max-width: 850px) {
-    max-height: calc(100vh - 296px);
+    height: calc(100vh - 296px);
   }
   @media ($sm-579) {
     max-height: calc(100vh - 331px);
